--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     let dataChannels = new Map();
     let connectionTimeouts = new Map();
     let retryCounts = new Map();
-    const maxRetries = 1;
+    const maxRetries = 2; // Increased for third client
     let candidatesQueues = new Map();
 
     const statusElement = document.getElementById('status');
@@ -102,6 +102,9 @@
           console.log(`Initialized client ${clientId}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
           initializeMaxClientsUI();
           updateMaxClientsUI();
+          if (isInitiator) {
+            setMaxClients(3); // Default to 3 for initiator
+          }
         }
         if (message.type === 'initiator-changed') {
           console.log(`Initiator changed to ${message.newInitiator} for code: ${code}`);
@@ -109,7 +112,7 @@
           initializeMaxClientsUI();
           updateMaxClientsUI();
           if (isInitiator) {
-            // Only restart failed connections
+            setMaxClients(maxClients); // Re-apply maxClients
             peerConnections.forEach((pc, id) => {
               if (pc.connectionState === 'disconnected' || pc.connectionState === 'failed') {
                 console.log(`Restarting connection with ${id} as new initiator`);
@@ -121,9 +124,10 @@
         }
         if (message.type === 'join-notify' && message.code === code) {
           totalClients = message.totalClients;
-          console.log(`Join-notify received for code: ${code}, new client: ${message.clientId}, total: ${totalClients}`);
+          console.log(`Join-notify received for code: ${code}, new client: ${message.clientId}, total: ${totalClients}, maxClients: ${maxClients}`);
           updateMaxClientsUI();
-          if (isInitiator && message.clientId !== clientId) {
+          if (isInitiator && message.clientId !== clientId && !peerConnections.has(message.clientId)) {
+            console.log(`Initiating peer connection with new client ${message.clientId}`);
             startPeerConnection(message.clientId, true);
           }
         }
@@ -157,7 +161,7 @@
 
     function initializeMaxClientsUI() {
       const maxClientsRadios = document.getElementById('maxClientsRadios');
-      maxClientsRadios.innerHTML = ''; // Clear existing radios
+      maxClientsRadios.innerHTML = '';
       if (isInitiator) {
         maxClientsContainer.classList.remove('hidden');
         for (let n = 2; n <= 10; n++) {
@@ -204,13 +208,8 @@
     function startPeerConnection(targetId, isOfferer) {
       console.log(`Starting peer connection with ${targetId} for code: ${code}, offerer: ${isOfferer}`);
       if (peerConnections.has(targetId)) {
-        peerConnections.get(targetId).close();
-        peerConnections.delete(targetId);
-        dataChannels.delete(targetId);
-        candidatesQueues.delete(targetId);
-        clearTimeout(connectionTimeouts.get(targetId));
-        connectionTimeouts.delete(targetId);
-        retryCounts.delete(targetId);
+        console.log(`Cleaning up existing connection with ${targetId}`);
+        cleanupPeerConnection(targetId);
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
@@ -237,7 +236,7 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log(`Sending ICE candidate to ${targetId} for code: ${code}`, event.candidate);
+          console.log(`Sending ICE candidate to ${targetId} for code: ${code}`);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code, targetId }));
         }
       };
@@ -251,7 +250,7 @@
               console.log(`ICE gathering timeout, sending offer to ${targetId}`);
               socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
             }
-          }, 3000);
+          }, 5000); // Increased timeout
         } else if (peerConnection.iceGatheringState === 'complete' && isOfferer) {
           clearTimeout(iceTimeout);
           console.log(`ICE gathering complete, sending offer to ${targetId}`);
@@ -262,17 +261,20 @@
       peerConnection.onconnectionstatechange = () => {
         console.log(`Connection state for ${targetId}: ${peerConnection.connectionState}`);
         if (peerConnection.connectionState === 'disconnected' || peerConnection.connectionState === 'failed') {
-          statusElement.textContent = 'Connection failed. Try again.';
+          statusElement.textContent = 'Connection failed. Retrying...';
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
-          if (retryCount < maxRetries && !dataChannels.get(targetId)?.readyState === 'open') {
+          if (retryCount < maxRetries) {
             retryCounts.set(targetId, retryCount + 1);
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
+          } else {
+            statusElement.textContent = 'Connection failed. Please try again.';
           }
         } else if (peerConnection.connectionState === 'connected') {
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
           isConnected = true;
+          retryCounts.delete(targetId);
           updateMaxClientsUI();
         }
       };
@@ -294,7 +296,6 @@
 
       const timeout = setTimeout(() => {
         if (!dataChannels.get(targetId)?.readyState === 'open') {
-          statusElement.textContent = 'Connection timed out. Try again.';
           console.log(`Connection timed out with ${targetId} for code: ${code}`);
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
@@ -302,14 +303,15 @@
             retryCounts.set(targetId, retryCount + 1);
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
+          } else {
+            statusElement.textContent = 'Connection timed out. Please try again.';
           }
         }
-      }, 180000);
+      }, 10000); // Reduced for faster retries
       connectionTimeouts.set(targetId, timeout);
     }
 
     function setupDataChannel(dataChannel, targetId) {
-      // Clear previous event listeners to prevent duplicates
       dataChannel.onmessage = null;
       dataChannel.onopen = null;
       dataChannel.onerror = null;
@@ -329,12 +331,10 @@
       dataChannel.onmessage = (event) => {
         console.log(`Received message from ${targetId}:`, event.data);
         const messages = document.getElementById('messages');
-        // Prevent processing relayed messages as new on initiator
         if (!isInitiator || dataChannels.get(targetId) === dataChannel) {
           messages.innerHTML += `<div class="text-gray-600">Them: ${event.data}</div>`;
           messages.scrollTop = messages.scrollHeight;
         }
-        // Relay message to other clients if initiator
         if (isInitiator) {
           dataChannels.forEach((dc, id) => {
             if (id !== targetId && dc.readyState === 'open' && dc !== dataChannel) {
